Mon Jul 15 02:32:04 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (enc_inspect): defer loading autoloaded encoding.

	* encoding.c (enc_check_encoding): use is_data_encoding() to check
	  type consistently.

	* encoding.c (must_encoding): return rb_encoding* instead of encoding
	  index.

	* encoding.c (enc_check_encoding): use is_data_encoding() to check
	  type consistently.

	* encoding.c (must_encoding): return rb_encoding* instead of encoding
	  index.

Mon Jul 15 02:21:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_fill_term): consider old terminator length, and should
	  not use rb_enc_ascget since it depends on the current encoding which
	  may not be compatible with the new terminator.  [Bug #8634]

	* encoding.c (enc_inspect): use PRIsVALUE to preserve the result
	  encoding.

	* encoding.c (enc_set_index): deal with terminator so that
	  rb_enc_set_index also works.

Sun Jul 14 23:21:47 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Check __builtin_popcountl, __builtin_bswap32 and
	  __builtin_bswap64.

	* internal.h (swap32): Use the configure result for the condition to
	  use __builtin_bswap32.
	  (swap64): Use the configure result for the condition to use
	  __builtin_bswap64.

	* bignum.c (ones): Use the configure result for the condition to use
	  __builtin_popcountl.
	  (bary_unpack_internal): Use appropriate types for swap argument.

Sun Jul 14 22:21:11 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_subb): Support xn < yn.
	  (bigsub_core): Removed.
	  (bigsub): Don't compare before subtraction.  Just subtract and
	  get the two's complement if the subtraction causes a borrow.

Sun Jul 14 00:36:03 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (DIGSPERLONG): Unused macro removed.
	  (DIGSPERLL): Ditto.

Sun Jul 14 00:32:51 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_aref): Less scan when the number is negative.

Sun Jul 14 00:17:42 2013  Tanaka Akira  <akr@fsij.org>
